--- a/rebar.config
+++ b/rebar.config
@@ -15,9 +15,7 @@
 
 {erl_opts, [
     debug_info,
-    {src_dirs, ["src", "test"]},
-    <!-- {i, "include"},
-    {i, "deps/gpb/include"} -->
+    {src_dirs, ["src", "test"]}
 ]}.
 
 {deps, []}.
